--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 "license": "MIT-License",
 "dependencies": {
 "@vitalets/google-translate-api": "^8.0.0",
-"@whiskeysockets/baileys": "npm:wileys",
+"@whiskeysockets/baileys": "github:gatanina-li/baileys",
 "acrcloud": "^1.4.0",
 "api-dylux": "^1.7.2",
 "aptoide-scraper": "github:DIEGO-OFC/dv-aptoide-scraper",
